Fixed text sizing + Pico8 demo on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -660,8 +660,8 @@ input, select, textarea {
 		}
 		
 		.full-screen-container {
-		width: 100vw; /* 100% of the viewport width */
-		height: 100vh; /* 100% of the viewport height */
+		width: 90vw; /* 90% of the viewport width */
+		height: 90vh; /* 90% of the viewport height */
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
@@ -1121,6 +1121,7 @@ input, select, textarea {
 		-ms-transform: scale(1.0);
 		transform: scale(1.0);
 		-webkit-backface-visibility: hidden;
+		backface-visibility: hidden;
 		position: fixed;
 		top: 0;
 		left: 0;
